--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "iloveu",
+  "name": "mylove",
   "version": "1.0.0",
+  "private": true,
+  "homepage": "https://DangKhoa218549.github.io/mylove",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -12,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.0.0"
+    "gh-pages": "^6.0.0",
+    "vite": "^5.0.0"
   }
 }
